--- a/build.settings
+++ b/build.settings
@@ -10,6 +10,7 @@ settings =
 		-- Supported values for orientation:
 		-- portrait, portraitUpsideDown, landscapeLeft, landscapeRight
 		default = "portrait",
+		supported = { "portrait", },
 	},
 
 	--
